--- a/3_semantic_segmentation/PSPNet_training.ipynb
+++ b/3_semantic_segmentation/PSPNet_training.ipynb
@@ -158,7 +158,7 @@
    "execution_count": 6,
    "source": [
     "def train_model(net, dataloaders_dict, criterion, scheduler, optimizer, num_epochs):\n",
-    "    device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    device = torch.device(\"cuda:1\" if torch.cuda.is_available() else \"cpu\")\n",
     "    print(\"사용 장치: \", device)\n",
     "\n",
     "    net.to(device)\n",
@@ -243,7 +243,7 @@
     "        logs.append(log_epoch)\n",
     "\n",
     "        df = pd.DataFrame(logs)\n",
-    "        df.to_dsv(\"log_output.csv\")\n",
+    "        df.to_csv(\"log_output.csv\")\n",
     "    \n",
     "    torch.save(net.state_dict(), \"weights/pspnet50_\"+str(epoch+1)+\".pth\")\n",
     "\n",
@@ -257,7 +257,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "source": [
-    "num_epochs = 30\n",
+    "num_epochs = 5\n",
     "train_model(net, dataloaders_dict, criterion, scheduler, optimizer, num_epochs)"
    ],
    "outputs": [
@@ -265,25 +265,151 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "사용 장치:  cuda:0\n"
+      "사용 장치:  cuda:1\n",
+      "-----------------------\n",
+      "Epoch 1/5\n",
+      "-----------------------\n",
+      " (train) \n"
      ]
     },
     {
-     "output_type": "error",
-     "ename": "RuntimeError",
-     "evalue": "CUDA error: out of memory\nCUDA kernel errors might be asynchronously reported at some other API call,so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1.",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-6784b9752a3c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnum_epochs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m30\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtrain_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataloaders_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscheduler\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_epochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-6-e89c9220e94f>\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(net, dataloaders_dict, criterion, scheduler, optimizer, num_epochs)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"사용 장치: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackends\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcudnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbenchmark\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/tf2.5/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36mto\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    850\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_floating_point\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_complex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_blocking\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    851\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 852\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_apply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconvert\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    853\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    854\u001b[0m     def register_backward_hook(\n",
-      "\u001b[0;32m~/.conda/envs/tf2.5/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_apply\u001b[0;34m(self, fn)\u001b[0m\n\u001b[1;32m    528\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_apply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    529\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mmodule\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchildren\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 530\u001b[0;31m             \u001b[0mmodule\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_apply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    531\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    532\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mcompute_should_use_set_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtensor_applied\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/tf2.5/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_apply\u001b[0;34m(self, fn)\u001b[0m\n\u001b[1;32m    528\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_apply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    529\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mmodule\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchildren\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 530\u001b[0;31m             \u001b[0mmodule\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_apply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    531\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    532\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mcompute_should_use_set_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtensor_applied\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/tf2.5/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_apply\u001b[0;34m(self, fn)\u001b[0m\n\u001b[1;32m    528\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_apply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    529\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mmodule\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchildren\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 530\u001b[0;31m             \u001b[0mmodule\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_apply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    531\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    532\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mcompute_should_use_set_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtensor_applied\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/tf2.5/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_apply\u001b[0;34m(self, fn)\u001b[0m\n\u001b[1;32m    550\u001b[0m                 \u001b[0;31m# `with torch.no_grad():`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    551\u001b[0m                 \u001b[0;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 552\u001b[0;31m                     \u001b[0mparam_applied\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    553\u001b[0m                 \u001b[0mshould_use_set_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_should_use_set_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparam_applied\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    554\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mshould_use_set_data\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/tf2.5/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36mconvert\u001b[0;34m(t)\u001b[0m\n\u001b[1;32m    848\u001b[0m                 return t.to(device, dtype if t.is_floating_point() or t.is_complex() else None,\n\u001b[1;32m    849\u001b[0m                             non_blocking, memory_format=convert_to_format)\n\u001b[0;32m--> 850\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_floating_point\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_complex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_blocking\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    851\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    852\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_apply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconvert\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: CUDA error: out of memory\nCUDA kernel errors might be asynchronously reported at some other API call,so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1."
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/home/plass-heesu/.conda/envs/tf2.5/lib/python3.7/site-packages/torch/optim/lr_scheduler.py:134: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
+      "  \"https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\", UserWarning)\n",
+      "/home/plass-heesu/.conda/envs/tf2.5/lib/python3.7/site-packages/torch/nn/functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
+      "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "반복 10 || Loss: 0.417579 || 10iter: 13.6435 sec.\n",
+      "반복 20 || Loss: 0.493122 || 10iter: 9.0591 sec.\n",
+      "반복 30 || Loss: 0.154389 || 10iter: 8.4469 sec.\n",
+      "반복 40 || Loss: 0.249624 || 10iter: 8.3748 sec.\n",
+      "반복 50 || Loss: 0.114953 || 10iter: 8.4954 sec.\n",
+      "반복 60 || Loss: 0.122395 || 10iter: 9.0559 sec.\n",
+      "반복 70 || Loss: 0.170661 || 10iter: 8.5380 sec.\n",
+      "반복 80 || Loss: 0.123969 || 10iter: 8.1906 sec.\n",
+      "반복 90 || Loss: 0.091108 || 10iter: 8.2258 sec.\n",
+      "반복 100 || Loss: 0.156867 || 10iter: 8.1483 sec.\n",
+      "반복 110 || Loss: 0.209027 || 10iter: 8.1365 sec.\n",
+      "반복 120 || Loss: 0.145492 || 10iter: 8.8458 sec.\n",
+      "반복 130 || Loss: 0.076361 || 10iter: 8.2547 sec.\n",
+      "반복 140 || Loss: 0.069479 || 10iter: 8.1023 sec.\n",
+      "반복 150 || Loss: 0.135678 || 10iter: 8.3065 sec.\n",
+      "반복 160 || Loss: 0.131270 || 10iter: 8.2000 sec.\n",
+      "반복 170 || Loss: 0.150835 || 10iter: 8.3389 sec.\n",
+      "반복 180 || Loss: 0.279392 || 10iter: 8.0733 sec.\n",
+      "-------------\n",
+      "epoch 1 || Epoch_TRAIN_Loss:0.1790 ||Epoch_VAL_Loss:0.0000\n",
+      "timer:  171.5831 sec.\n",
+      "-----------------------\n",
+      "Epoch 2/5\n",
+      "-----------------------\n",
+      " (train) \n",
+      "반복 190 || Loss: 0.065640 || 10iter: 5.4685 sec.\n",
+      "반복 200 || Loss: 0.062947 || 10iter: 8.1495 sec.\n",
+      "반복 210 || Loss: 0.086953 || 10iter: 8.1654 sec.\n",
+      "반복 220 || Loss: 0.108796 || 10iter: 8.4409 sec.\n",
+      "반복 230 || Loss: 0.080740 || 10iter: 8.1033 sec.\n",
+      "반복 240 || Loss: 0.064764 || 10iter: 8.2123 sec.\n",
+      "반복 250 || Loss: 0.093020 || 10iter: 8.1839 sec.\n",
+      "반복 260 || Loss: 0.049842 || 10iter: 8.1285 sec.\n",
+      "반복 270 || Loss: 0.091492 || 10iter: 8.1183 sec.\n",
+      "반복 280 || Loss: 0.098007 || 10iter: 8.1133 sec.\n",
+      "반복 290 || Loss: 0.061226 || 10iter: 8.0555 sec.\n",
+      "반복 300 || Loss: 0.036862 || 10iter: 8.3389 sec.\n",
+      "반복 310 || Loss: 0.138199 || 10iter: 8.2496 sec.\n",
+      "반복 320 || Loss: 0.070404 || 10iter: 8.1997 sec.\n",
+      "반복 330 || Loss: 0.141016 || 10iter: 8.6599 sec.\n",
+      "반복 340 || Loss: 0.070373 || 10iter: 8.2517 sec.\n",
+      "반복 350 || Loss: 0.078723 || 10iter: 8.3011 sec.\n",
+      "반복 360 || Loss: 0.069698 || 10iter: 8.1029 sec.\n",
+      "-------------\n",
+      "epoch 2 || Epoch_TRAIN_Loss:0.0927 ||Epoch_VAL_Loss:0.0000\n",
+      "timer:  163.0055 sec.\n",
+      "-----------------------\n",
+      "Epoch 3/5\n",
+      "-----------------------\n",
+      " (train) \n",
+      "반복 370 || Loss: 0.043178 || 10iter: 2.8696 sec.\n",
+      "반복 380 || Loss: 0.051046 || 10iter: 8.3040 sec.\n",
+      "반복 390 || Loss: 0.102457 || 10iter: 8.1459 sec.\n",
+      "반복 400 || Loss: 0.064225 || 10iter: 8.2799 sec.\n",
+      "반복 410 || Loss: 0.073121 || 10iter: 8.1789 sec.\n",
+      "반복 420 || Loss: 0.073822 || 10iter: 8.1235 sec.\n",
+      "반복 430 || Loss: 0.091650 || 10iter: 8.1256 sec.\n",
+      "반복 440 || Loss: 0.052918 || 10iter: 8.1825 sec.\n",
+      "반복 450 || Loss: 0.101576 || 10iter: 8.1008 sec.\n",
+      "반복 460 || Loss: 0.047447 || 10iter: 8.0590 sec.\n",
+      "반복 470 || Loss: 0.052578 || 10iter: 8.1563 sec.\n",
+      "반복 480 || Loss: 0.075309 || 10iter: 8.1526 sec.\n",
+      "반복 490 || Loss: 0.049510 || 10iter: 8.1023 sec.\n",
+      "반복 500 || Loss: 0.078180 || 10iter: 8.0874 sec.\n",
+      "반복 510 || Loss: 0.096064 || 10iter: 8.1948 sec.\n",
+      "반복 520 || Loss: 0.191475 || 10iter: 8.0820 sec.\n",
+      "반복 530 || Loss: 0.058899 || 10iter: 8.1968 sec.\n",
+      "반복 540 || Loss: 0.039742 || 10iter: 8.0565 sec.\n",
+      "-------------\n",
+      "epoch 3 || Epoch_TRAIN_Loss:0.0811 ||Epoch_VAL_Loss:0.0000\n",
+      "timer:  161.7564 sec.\n",
+      "-----------------------\n",
+      "Epoch 4/5\n",
+      "-----------------------\n",
+      " (train) \n",
+      "반복 550 || Loss: 0.094538 || 10iter: 0.1760 sec.\n",
+      "반복 560 || Loss: 0.081317 || 10iter: 8.2998 sec.\n",
+      "반복 570 || Loss: 0.055567 || 10iter: 8.2710 sec.\n",
+      "반복 580 || Loss: 0.066206 || 10iter: 8.1858 sec.\n",
+      "반복 590 || Loss: 0.168011 || 10iter: 8.0544 sec.\n",
+      "반복 600 || Loss: 0.045489 || 10iter: 8.0693 sec.\n",
+      "반복 610 || Loss: 0.065479 || 10iter: 8.2845 sec.\n",
+      "반복 620 || Loss: 0.052777 || 10iter: 8.1829 sec.\n",
+      "반복 630 || Loss: 0.089559 || 10iter: 8.0633 sec.\n",
+      "반복 640 || Loss: 0.047036 || 10iter: 8.1152 sec.\n",
+      "반복 650 || Loss: 0.080725 || 10iter: 8.2979 sec.\n",
+      "반복 660 || Loss: 0.063931 || 10iter: 8.2079 sec.\n",
+      "반복 670 || Loss: 0.085145 || 10iter: 8.1287 sec.\n",
+      "반복 680 || Loss: 0.101045 || 10iter: 8.1396 sec.\n",
+      "반복 690 || Loss: 0.075263 || 10iter: 8.0394 sec.\n",
+      "반복 700 || Loss: 0.158045 || 10iter: 8.1835 sec.\n",
+      "반복 710 || Loss: 0.044661 || 10iter: 8.1920 sec.\n",
+      "반복 720 || Loss: 0.030425 || 10iter: 8.2373 sec.\n",
+      "반복 730 || Loss: 0.077053 || 10iter: 8.1138 sec.\n",
+      "-------------\n",
+      "epoch 4 || Epoch_TRAIN_Loss:0.0715 ||Epoch_VAL_Loss:0.0000\n",
+      "timer:  162.2041 sec.\n",
+      "-----------------------\n",
+      "Epoch 5/5\n",
+      "-----------------------\n",
+      " (train) \n",
+      "반복 740 || Loss: 0.055286 || 10iter: 6.3649 sec.\n",
+      "반복 750 || Loss: 0.067507 || 10iter: 8.0580 sec.\n",
+      "반복 760 || Loss: 0.110795 || 10iter: 8.1212 sec.\n",
+      "반복 770 || Loss: 0.045714 || 10iter: 8.0520 sec.\n",
+      "반복 780 || Loss: 0.044759 || 10iter: 8.0282 sec.\n",
+      "반복 790 || Loss: 0.045800 || 10iter: 8.0015 sec.\n",
+      "반복 800 || Loss: 0.083915 || 10iter: 7.9681 sec.\n",
+      "반복 810 || Loss: 0.052488 || 10iter: 8.0006 sec.\n",
+      "반복 820 || Loss: 0.099563 || 10iter: 7.9603 sec.\n",
+      "반복 830 || Loss: 0.020322 || 10iter: 8.0517 sec.\n",
+      "반복 840 || Loss: 0.068207 || 10iter: 8.0946 sec.\n",
+      "반복 850 || Loss: 0.051090 || 10iter: 8.0879 sec.\n",
+      "반복 860 || Loss: 0.066291 || 10iter: 8.0058 sec.\n",
+      "반복 870 || Loss: 0.040309 || 10iter: 8.0659 sec.\n",
+      "반복 880 || Loss: 0.060904 || 10iter: 8.0385 sec.\n",
+      "반복 890 || Loss: 0.049185 || 10iter: 8.0245 sec.\n",
+      "반복 900 || Loss: 0.053152 || 10iter: 8.1999 sec.\n",
+      "반복 910 || Loss: 0.041925 || 10iter: 8.0072 sec.\n",
+      "-----------------------\n",
+      " (val) \n",
+      "-------------\n",
+      "epoch 5 || Epoch_TRAIN_Loss:0.0633 ||Epoch_VAL_Loss:0.0810\n",
+      "timer:  214.5680 sec.\n"
      ]
     }
    ],
