--- a/7_nlp_sentiment_transformer/make_folders_and_data_downloads.ipynb
+++ b/7_nlp_sentiment_transformer/make_folders_and_data_downloads.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,9 +197,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "f0c8f38a05a53c2939c3a449707bff7fbed115767dc1eebd5b471500306b379e"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.7.10 64-bit ('tf2.5': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -212,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
