--- a/8_nlp_sentiment_bert/make_folders_and_data_downloads.ipynb
+++ b/8_nlp_sentiment_bert/make_folders_and_data_downloads.ipynb
@@ -68,7 +68,7 @@
      "data": {
       "text/plain": [
        "('./vocab/bert-base-uncased-vocab.txt',\n",
-       " <http.client.HTTPMessage at 0x7fc9ed54d780>)"
+       " <http.client.HTTPMessage at 0x7fb6b85678d0>)"
       ]
      },
      "execution_count": 5,
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,9 +226,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "f0c8f38a05a53c2939c3a449707bff7fbed115767dc1eebd5b471500306b379e"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.7.10 64-bit ('tf2.5': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -241,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
